--- a/styles/loader.css
+++ b/styles/loader.css
@@ -42,7 +42,7 @@
 .pace-progress-inner {
   width: 40px;
   height: 40px;
-  background-color: #085808;
+  background-color: royalblue;
   margin: 0 auto;
   -webkit-animation-name: sk-rotateplane;
           animation-name: sk-rotateplane;
